# fortress_evals

./: .gitignore  caps_run.py  caps_worker.py  config.yaml  config_default.yaml  lda.py  plot.py  pyproject.toml  run.py  sample_prompts.py  worker.py
configs/: base_32b.yaml  caps_7b_hf_steps.yaml  caps_7b_steps.yaml  caps_example.yaml  caps_test.yaml  default.yaml  default_7b.yaml  dolci_ifeval_32b.yaml  dolci_rl_32b.yaml  dolci_rl_32b_dpo.yaml  dolci_rl_32b_unused.yaml  dolci_rl_32b_unused_dpo.yaml  fortress_7b.yaml  harmbench_sr.yaml  harmbench_sr_7b.yaml  hbsr_7b_steps.yaml  lda08_hbsr_7b_steps.yaml  lda12_hbsr_7b_steps.yaml  lda_hbsr_7b_steps.yaml  steps.yaml  test.yaml
scripts/: plot_all.py  plot_awareness.py  plot_delta.py  plot_dolci.py  plot_lengths.py
style/: plot_config.py
